adding task scheduler and css changes